force-app/main/default/objects/Tabla_Macrozonas__c/Tabla_Macrozonas__c.object-meta.xml
<CustomObject>
    <label>Tabla Macrozona</label>
    <nameField>
        <displayFormat>TMZ-{00000}</displayFormat>
        <label>Nombre de Tabla Macrozonas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabla Macrozonas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>