force-app/main/default/objects/Tabla_Macrozonas__c/fields/Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost__c</fullName>
    <inlineHelpText>Freight Costo to be used as CIP Incoterm Adjustment</inlineHelpText>
    <label>Freight Cost</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>