force-app/main/default/objects/Tabla_Macrozonas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Freight_Cost__c</columns>
    <columns>Product__c</columns>
    <columns>Zone__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>