force-app/main/default/objects/Tabla_Macrozonas__c/listViews/LC_USD.listView-meta.xml
<ListView>
    <fullName>LC_USD</fullName>
    <columns>NAME</columns>
    <columns>Zone__c</columns>
    <columns>Product__c</columns>
    <columns>Freight_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>LC</value>
    </filters>
    <label>LC - USD</label>
</ListView>